# verdocs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html
docs/: config.yml
docs/v0.1.0/command-line/: command-line.md
docs/v0.1.0/core-concepts/: core-concepts.md
docs/v0.1.0/customisation/: customisation.md
docs/v0.1.0/deployment/: deployment.md
docs/v0.1.0/features/: sidebar.md
docs/v0.1.0/home/: home.md
docs/v0.1.0/quick-start/: quick-start.md
docs/v0.2.0/deployment/: deployment.md
docs/v0.2.0/features/: code-blocks.md  features.md  minimap.md  preview-server.md  search.md
docs/v0.2.0/home/: home.md
docs/v0.2.0/project-requirements/: project-requirements.md
docs/v0.2.0/quick-start/: quick-start.md
resources/: default_config.yml
scripts/: build_linux_release.sh  build_macos_release.sh  install.sh
search-index/: v0-1-0.json  v0-2-0.json
src/: clean.rs  cli.rs  config.rs  generator.rs  init.rs  main.rs  server.rs
v0.1.0/command-line/: index.html
v0.1.0/core-concepts/: index.html
v0.1.0/core-concepts/admonitions/: index.html
v0.1.0/customisation/: index.html
v0.1.0/deployment/: index.html
v0.1.0/features/: index.html
v0.1.0/home/: index.html
v0.1.0/project-requirements/: index.html
v0.1.0/quick-start/: index.html
v0.2.0/command-line/: index.html
v0.2.0/core-concepts/: index.html
v0.2.0/customisation/: index.html
v0.2.0/deployment/: index.html
v0.2.0/features/: index.html
v0.2.0/home/: index.html
v0.2.0/project-requirements/: index.html
v0.2.0/quick-start/: index.html
(+18 files in other folders)
