[package]
name = "verdocs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
pulldown-cmark = "0.10"
walkdir = "2"
fs_extra = "1.3"
anyhow = "1.0"
tiny_http = "0.12"
open = "5.0"
notify = "6.1"
regex = "1.10"
dirs = "5.0"
